--- a/src/style/sass/sidebar.scss
+++ b/src/style/sass/sidebar.scss
@@ -11,7 +11,7 @@
   color: white;
 }
 
-.form-step{
+.sidebar-step{
   margin: 1.25rem;
   display: flex;
   justify-content: flex-start;
@@ -20,15 +20,7 @@
 }
 
 .step-number{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
-  width: 2.5rem;
-  height: 2.5rem;
-  border-radius: 50%;
   border: 1px solid white;
-
   color: white;
   margin-right: 1rem;
 
