--- a/src/style/sass/App.scss
+++ b/src/style/sass/App.scss
@@ -39,6 +39,10 @@ $StrawberryRed: hsl(354, 84%, 57%);
   color: $CoolGray;
 }
 
+.purple {
+  background-color: $PurplishBlue;
+}
+
 .form-step-container{
   height: 300px;
 }
@@ -74,11 +78,15 @@ $StrawberryRed: hsl(354, 84%, 57%);
     background-color: $MarineBlue !important;
     color: white !important;
     font-weight: 400 !important;
+    
+    &.purple {
+      background-color: $PurplishBlue !important;
+    }
   }
   
-  #go-back-button{
+  // #go-back-button{
   
-  }
+  // }
 }
 
 .plan-select{
@@ -182,9 +190,9 @@ $StrawberryRed: hsl(354, 84%, 57%);
 .chakra-link{
   color: $PurplishBlue !important;
 
-  &:hover{
-    // color: hsl(243, 100%, 62%)
-  }
+  // &:hover{
+    
+  // }
 }
 
 .addon-summary-detail{
