--- a/src/style/sass/App.scss
+++ b/src/style/sass/App.scss
@@ -553,6 +553,23 @@ input{
 
   .thankYou{
     padding: 0.5rem;
+
+    img{
+      width: 66%;
+      margin: 2rem 0 1rem 0;
+    }
+
+    > * {
+      margin: 0.25rem 0;
+    }
+
+    h2{
+      font-size: 1.5rem ;
+    }
+
+    p{
+      font-size: 1rem;
+    }
   }
 
 }
