--- a/src/style/sass/App.scss
+++ b/src/style/sass/App.scss
@@ -31,6 +31,7 @@ $GhostWhite: hsl(230,75%,98%);
   justify-content: center;
   align-items: center;
   height: 100vh;
+  width: 100vw;
 }
 
 .bold {
@@ -68,14 +69,18 @@ input{
 
 //---------------Main Form----------------
 
+#form-card{
+  // width: 100%;
+}
+
 #form-card-body{
-  width: 975px;
+  // width: 975px;
   display: flex;
   justify-content: space-between;
 }
 
 #form-wrapper{
-  width: 70%;
+  // width: 70%;
   margin: 2rem;
 }
 
