--- a/src/style/sass/App.scss
+++ b/src/style/sass/App.scss
@@ -74,14 +74,16 @@ input{
 }
 
 #form-card-body{
-  // width: 975px;
+  width: 975px;
+  // min-width: 500px;
   display: flex;
   justify-content: space-between;
 }
 
 #form-wrapper{
-  // width: 70%;
-  margin: 2rem;
+  width: 70%;
+  // margin: 1rem;
+  padding: 2rem;
 }
 
 #form-container{
