--- a/src/style/sass/App.scss
+++ b/src/style/sass/App.scss
@@ -433,6 +433,7 @@ input{
 
   #form-wrapper{
     width: 100%;
+    padding: 0;
     margin: 0;
   }
 
@@ -452,12 +453,13 @@ input{
   }
 
   #form-buttons{
-    width: 100%;
+    width: 375px;
     background-color: $Alabaster;
     margin: 0;
     padding: 1rem;
     position: absolute;
     bottom: 0;
+    left: 0;
     
     > * {
       padding: 1rem;
